# FastApi_Project

./: Dockerfile  docker-compose.yml  fastapi_app.db  pyproject.toml  requirements.txt
.github/workflows/: my-tests.yml
fastapi_app/: auth.py  config.py  forms.py  handlers.py  main.py  models.py  utils.py
scripts/: create_db.py
tests/: test_api.py
