[tool.poetry]
name = "fastapiprobnik"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
pytest = "^7.2.0"
requests = "^2.28.1"
sqlalchemy = "^1.4.44"
uvicorn = "^0.20.0"
pydantic = "^1.7.2"
httpx = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
